# serializer version: 1
# name: test_cost_when_cap_set_and_usage_received_does_show_cost_against_cap
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           1s  cap in 7h 59m │
  │ cost $4.12 / $10.00                                                                              │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_cost_when_no_cap_and_no_usage_does_show_zero_cost
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           0s  cap in 8h 00m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_dashboard_when_mid_session_does_render_full_layout
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time ━━━━━━━━━━━━━━━━━━━━━━━                                               2h 42m  cap in 5h 17m │
  │ cost $4.12 / $10.00                                                                              │
  │ loop   3/5 iterations · 1 kept · 1 discarded · last -6.8% improved                               │
  │ best -6.8% geomean vs baseline abc1234 (iteration 3)                                             │
  │   02:41:03  Bash   gymrat iterate  1m 0s                                                         │
  │   02:41:03  Edit   src/archetype.ts  2h 41m                                                      │
  │   02:41:02  Read   src/archetype.ts  2h 41m                                                      │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_loop_when_iterations_present_does_show_counts_and_last
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           0s  cap in 8h 00m │
  │ cost $0.00                                                                                       │
  │ loop   3/20 iterations · 2 kept · 1 discarded · last -3.2% improved                              │
  │   waiting  0s                                                                                    │
  │   00:00:03  Bash   ...  1s                                                                       │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_panel_title_when_launched_does_contain_session_and_branch
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time                                                                           0s  cap in 8h 00m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_time_bar_when_elapsed_exceeds_max_does_clamp_remaining_to_zero
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2h 00m  cap in 0s │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_time_bar_when_launched_does_show_elapsed_and_cap_in_remaining
  '''
  ╭─ supervise · session 20260813-125044-34ec · branch gymrat/20260813-125044-34ec ──────────────────╮
  │ time ━━━━━━━━━━━━━━━━━━━━━━━                                               2h 41m  cap in 5h 19m │
  │ cost $0.00                                                                                       │
  │ loop   no session yet                                                                            │
  │ starting                                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  '''
# ---
